--- a/test.html
+++ b/test.html
@@ -1,3 +1,41 @@
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>GitHub Image File List</title>
+  <style>
+  img {
+    max-height: 200px;
+	float: left;
+	border: 5px solid #eee;
+	margin: 3px;
+	padding: 3px;
+  }
+  </style>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+</head>
+<body>
+ 
+
+ 
 <script>
-  alert("hello");
-  </script>
+var github = "https://api.github.com/repos/wawajohn/wawajohn.github.io/contents";
+$.getJSON( github, function( data ) {
+  var items = [];
+  $.each( data, function( key, val ) {
+	var imgurl = "http://img.wawajohn.net/"+ val["path"]
+	var regexp_patt = /\.(png|bmp|jpg|jpeg|gif)$/i;
+	var regexp_result = regexp_patt.test(imgurl);
+	if (regexp_result) {
+		items.unshift( '<a href="'+ imgurl +'"><img title="'+ imgurl +'" src="'+ imgurl + '" /></a>' );
+	}
+  });
+ 
+  $( "<p>", {
+    "class": "my-new-list",
+    html: items.join( "" )
+  }).appendTo( "body" );
+});
+</script>
+ 
+</body>
+</html>
