--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
   }
   </style>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '660492304097201',
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 </head>
 <body>
  
