--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	padding: 3px;
   }
   </style>
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
 </head>
 <body>
  <script>
