--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ li {line-height: 2em; margin-left: 2.5em; border: 0px solid red}
 </style>
   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="token.js"></script>
 
 
 <script>
