--- a/rent/index.html
+++ b/rent/index.html
@@ -1,4 +1,124 @@
-
+<div>大：大樓；寓：公寓</div>
+<table class="fr-alternate-rows" style="width: 100%;">
+    <thead>
+        <tr>
+            <th style="width: 5.5777%;">No.</th>
+            <th style="width: 8.7649%;">租金</th>
+            <th style="width: 16.4653%;">租金含</th>
+            <th style="width: 8.3643%;">管理費</th>
+            <th style="width: 14.3094%;">鄰近</th>
+            <th style="width: 13.4462%;">仲介</th>
+            <th style="width: 32.8309%;">網址</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="width: 5.5777%;">1</td>
+            <td style="width: 8.7649%;">21000</td>
+            <td style="width: 16.4653%;">
+                <ul>
+                    <li><s>水<br></s></li>
+                    <li><s>電</s></li>
+                    <li><s>瓦斯</s></li>
+                    <li>網路</li>
+                    <li>第四台</li>
+                </ul>
+            </td>
+            <td style="width: 8.3643%;">大<br>1200</td>
+            <td style="width: 14.3094%;">中山國小</td>
+            <td style="width: 13.4462%;">yes</td>
+            <td style="width: 32.8309%;"><a href="https://rent.591.com.tw/rent-detail-7368869.html">https://rent.591.com.tw/rent-detail-7368869.html</a></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;">2<br></td>
+            <td style="width: 8.7649%;">21000<br></td>
+            <td style="width: 16.4653%;">
+                <ul>
+                    <li>水<s><br></s></li>
+                    <li><s>電</s></li>
+                    <li><s>瓦斯</s></li>
+                    <li>網路</li>
+                    <li>第四台</li>
+                </ul><br></td>
+            <td style="width: 8.3643%;">寓<br>1000<br></td>
+            <td style="width: 14.3094%;">松江南京<br>南京復復<br></td>
+            <td style="width: 13.4462%;">yes<br></td>
+            <td style="width: 32.8309%;"><a href="https://rent.591.com.tw/rent-detail-7378488.html">https://rent.591.com.tw/rent-detail-7378488.html</a><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+        <tr>
+            <td style="width: 5.5777%;"><br></td>
+            <td style="width: 8.7649%;"><br></td>
+            <td style="width: 16.4653%;"><br></td>
+            <td style="width: 8.3643%;"><br></td>
+            <td style="width: 14.3094%;"><br></td>
+            <td style="width: 13.4462%;"><br></td>
+            <td style="width: 32.8309%;"><br></td>
+        </tr>
+    </tbody>
+</table>
 <ol>
 <li>(中山國小,橘,26800)<br/><a href="https://rent.591.com.tw/rent-detail-7329291.html" target="_blank">https://rent.591.com.tw/rent-detail-7329291.html</a><br />
 <img src="01.png">
@@ -10,6 +130,9 @@
 
 
 <li>(中山國小,29000)<br/><a href="https://rent.591.com.tw/rent-detail-7308544.html" target="_blank">https://rent.591.com.tw/rent-detail-7308544.html</a></li>
+
+  
+<li>(中山國小,21000,管1200)<br/><a href="https://rent.591.com.tw/rent-detail-7368869.html" target="_blank">https://rent.591.com.tw/rent-detail-7368869.html</a></li>
 
 
 </ol>
