--- a/rent/index.html
+++ b/rent/index.html
@@ -1,3 +1,8 @@
+
+  <link rel="stylesheet" media="screen" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css" />
+  <link rel="stylesheet" media="all" href="https://cdn0.froala.com/assets/B/application-6669b46b50a1eda7937a62d294c2ccbe.css" />
+  <link rel="stylesheet" media="all" href="https://cdn0.froala.com/assets/editor/html/application-ada5380443b6e44287f50e949255cfe3.css" />
+  
 <div>大：大樓；寓：公寓</div>
 <table class="fr-alternate-rows" style="width: 100%;">
     <thead>
