--- a/rent/index.html
+++ b/rent/index.html
@@ -1,10 +1,13 @@
+<!doctype html>
+<html lang="en">
+  <head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  </head>
+  <body>
 
-  <link rel="stylesheet" media="screen" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css" />
-  <link rel="stylesheet" media="all" href="https://cdn0.froala.com/assets/B/application-6669b46b50a1eda7937a62d294c2ccbe.css" />
-  <link rel="stylesheet" media="all" href="https://cdn0.froala.com/assets/editor/html/application-ada5380443b6e44287f50e949255cfe3.css" />
-  
 <div>大：大樓；寓：公寓</div>
-<table class="fr-alternate-rows" style="width: 100%;">
+    <div class="table-responsive">
+<table class="table" style="width: 100%;">
     <thead>
         <tr>
             <th style="width: 5.5777%;">No.</th>
@@ -124,6 +127,7 @@
         </tr>
     </tbody>
 </table>
+    </div>
 <ol>
 <li>(中山國小,橘,26800)<br/><a href="https://rent.591.com.tw/rent-detail-7329291.html" target="_blank">https://rent.591.com.tw/rent-detail-7329291.html</a><br />
 <img src="01.png">
@@ -141,3 +145,5 @@
 
 
 </ol>
+  </body>
+</html>
