--- a/rent/index.html
+++ b/rent/index.html
@@ -1,133 +1,64 @@
 <!doctype html>
-<html lang="en">
+<html lang="UTF-8">
   <head>
+  <meta charset="UTF-8" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-
-<div>大：大樓；寓：公寓</div>
-    <div class="table-responsive">
-<table class="table" style="width: 100%;">
-    <thead>
-        <tr>
-            <th style="width: 5.5777%;">No.</th>
-            <th style="width: 8.7649%;">租金</th>
-            <th style="width: 16.4653%;">租金含</th>
-            <th style="width: 8.3643%;">管理費</th>
-            <th style="width: 14.3094%;">鄰近</th>
-            <th style="width: 13.4462%;">仲介</th>
-            <th style="width: 32.8309%;">網址</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td style="width: 5.5777%;">1</td>
-            <td style="width: 8.7649%;">21000</td>
-            <td style="width: 16.4653%;">
-                <ul>
-                    <li><s>水<br></s></li>
-                    <li><s>電</s></li>
-                    <li><s>瓦斯</s></li>
-                    <li>網路</li>
-                    <li>第四台</li>
-                </ul>
-            </td>
-            <td style="width: 8.3643%;">大<br>1200</td>
-            <td style="width: 14.3094%;">中山國小</td>
-            <td style="width: 13.4462%;">yes</td>
-            <td style="width: 32.8309%;"><a href="https://rent.591.com.tw/rent-detail-7368869.html">https://rent.591.com.tw/rent-detail-7368869.html</a></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;">2<br></td>
-            <td style="width: 8.7649%;">21000<br></td>
-            <td style="width: 16.4653%;">
-                <ul>
-                    <li>水<s><br></s></li>
-                    <li><s>電</s></li>
-                    <li><s>瓦斯</s></li>
-                    <li>網路</li>
-                    <li>第四台</li>
-                </ul><br></td>
-            <td style="width: 8.3643%;">寓<br>1000<br></td>
-            <td style="width: 14.3094%;">松江南京<br>南京復復<br></td>
-            <td style="width: 13.4462%;">yes<br></td>
-            <td style="width: 32.8309%;"><a href="https://rent.591.com.tw/rent-detail-7378488.html">https://rent.591.com.tw/rent-detail-7378488.html</a><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-        <tr>
-            <td style="width: 5.5777%;"><br></td>
-            <td style="width: 8.7649%;"><br></td>
-            <td style="width: 16.4653%;"><br></td>
-            <td style="width: 8.3643%;"><br></td>
-            <td style="width: 14.3094%;"><br></td>
-            <td style="width: 13.4462%;"><br></td>
-            <td style="width: 32.8309%;"><br></td>
-        </tr>
-    </tbody>
-</table>
-    </div>
+<div class="table-responsive">
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>No.</th>
+                <th>租金</th>
+                <th>租金含</th>
+                <th>管理費</th>
+                <th>鄰近</th>
+                <th>仲介</th>
+                <th>網址</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>21000</td>
+                <td>
+                    <ul>
+                        <li>網路</li>
+                        <li>第四台</li>
+                    </ul>
+                </td>
+                <td>1200</td>
+                <td>中山國小</td>
+                <td>yes</td>
+                <td><a href="https://rent.591.com.tw/rent-detail-7368869.html">https://rent.591.com.tw/rent-detail-7368869.html</a></td>
+            </tr>
+            <tr>
+                <td>2<br></td>
+                <td>21000<br></td>
+                <td>
+                    <ul>
+                        <li>水</li>
+                        <li>網路</li>
+                        <li>第四台</li>
+                    </ul><br></td>
+                <td>1000<br></td>
+                <td>松江南京<br>南京復復<br></td>
+                <td>yes<br></td>
+                <td><a href="https://rent.591.com.tw/rent-detail-7378488.html">https://rent.591.com.tw/rent-detail-7378488.html</a><br></td>
+            </tr>
+            <tr>
+                <td>3<br></td>
+                <td>26000<br></td>
+                <td>-<br></td>
+                <td>700<br></td>
+                <td>松江南京<br></td>
+                <td>yes<br></td>
+                <td><a href="https://www.rakuya.com.tw/rent_item/info?ehid=0c8eaa92183899">https://www.rakuya.com.tw/rent_item/info?ehid=0c8eaa92183899</a><br></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 <ol>
 <li>(中山國小,橘,26800)<br/><a href="https://rent.591.com.tw/rent-detail-7329291.html" target="_blank">https://rent.591.com.tw/rent-detail-7329291.html</a><br />
 <img src="01.png">
