--- a/lte/index.html
+++ b/lte/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Let's Talk in English</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <title>Let's Talk in English</title>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/hot-sneaks/jquery-ui.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"  crossorigin="anonymous">
 
   <!-- hls.js -->
 
@@ -20,7 +22,8 @@
 </head>
 
 <body>
-<h3 id="datetitle"></h3>
+
+<h5 id="datetitle"></h5>
 <video id="video" controls preload="auto"></video>
 
 <div id="rightside">
