--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GitHub Image File List</title>
+  <title>GitHub Image File List by Jquery</title>
   <style>
   img {
     max-height: 200px;
